@@ -1,5 +1,6 @@
 Changes for 1.1beta1:
 
+ - fixed addition of triggers to linked hosts (Alexei)
  - group functions for item manipulations (Alexei)
  - changes umask(0) to umask(022) to prevent world-wrtie access (Alexei)
  - updated fs.file.md5sum and fs.file.cksum (Alexei)
